--- a/index.html
+++ b/index.html
@@ -9,35 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-
       body {
-          background-image: url("../static/images/cover.jpg");
           background-size: cover;
           background-repeat: no-repeat;
           background-attachment: fixed;
+          margin: 0px;
       }
-     a {
-         color: white;
-     }
-
+      #canvas{
+        display: inline-block;
+        margin: 0px;
+      }
     </style>
 
   </head>
-  <body>
 
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
@@ -54,32 +40,17 @@
           </div>
         </div>
       </nav>
+      
+  <canvas>
+  </canvas>
 
-
-<main class="container m-5 p-5">
-  <div class="bg-light p-5 rounded text-center" >
-    <h1>Movies Database</h1>
-    <p style="color:rgb(84, 33, 226);">
-      This database lists a number of movies along with their genres, actors, and release dates.
-
-      </p>
-  </div>
-
-  <div class="m-5 p-5 rounded text-center" style="background-color: #333399; color: beige;">
-    <p> We have listed some fun statistics of the movies in our database below. </p><br>
-        <a  class="btn btn-danger" button type="button" onclick="display_genre_data()"> View Total Number of Actors in each Genre</a>
-        <a  class="btn btn-success" onclick="display_genre_actor_data()"> View Total Number of Movies in each Genre</a>
-        <div id="display"></div>
-  </div>
-  
-</main>
 
 <!-- NAV Doesn't expand when minimized without this -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
             integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
             crossorigin="anonymous"></script>
 
-    <script src="{{ url_for('static', filename='js/load_data.js') }}"></script>
+    <script src="./static/index.js" type = "module"></script>
 
 
   </body>
