--- a/contactme.html
+++ b/contactme.html
@@ -55,7 +55,7 @@
         <BODY>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top" aria-label="navbar">
                 <div class = "container-fluid">
-                    <a href="homepage.html" class="navbar-brand">
+                    <a href="index.html" class="navbar-brand">
                     <img src="IMG_0351.png" class = "rounded-thumbnail" alt="naviLogo" width="30" heigh="24" 
                         class="d-inline-block align-top">
                         Home </a> 
