--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 padding: 40px;
             }
             .sectionOne{
-                padding-top: 200px;
-                height: 100vh;
+                padding-top: 80px;
+                flex-wrap:wrap;
             }
 
             .sectionTwo{
@@ -113,12 +113,13 @@
             
             <section class="sectionOne">
                 <div class="container-fluid">
-                    <div class="row d-flex justify-content-center">
+                    <div class="row container-fluid">
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <h1 class="h1 fw-light">Rowen Lagtapon</h1><BR>
                             <img src="IMG_0350.png" border="5" alt="Picture of Self" width="350" height="400" class = "img-fluid">
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                            <div style="height: 100vh">
                             <h2 id ="introText"><BR>Hello, my name is Rowen Lagtapon.</h2>
                             <br><p id="test"> I am a programmer, working towards a Bachelor's in Computer Science. </p>
                             <p> with an expected Graduation date of May 2022.</p>
@@ -129,14 +130,14 @@
                                     <li><p>Web Development: HTML, CSS, Bootstrap, JavaScript, jQuery, Python, Flask, Jinja Template. </p></li>
                                     <li><p>Linux: Ubuntu, ipTables, Docker</p></li>
                             </ul>
-                           <br><p> Currently, I have a Bachelor's of Arts in English Writing, with Minor's in Communication
-                                from Texas A&M University </p>
-                        </div>
+                           <br><p> Currently, I have a Bachelor's of Arts in English Writing, with Minor's in Communication from Texas A&M University </p>  
+                           </div>  
+                         </div>
                     </div>
                 </div>
             </section>
             <br>
-            <div class = "row d-flex justify-content-center"">
+            <div class = "row align-items-md-stretch">
                 <!-- secioneTwoA: Education Summary -->
                 <div class="col-md-4">
                     <div class="h-100 p-5 sectionTwo border rounded-3">
