--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                             <img src="IMG_0350.png" border="5" alt="Picture of Self" width="350" height="400" class = "img-fluid">
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                            <div  class="vh-100">
+                            <div style="height: 100vh">
                             <h2 id ="introText"><BR>Hello, my name is Rowen Lagtapon.</h2>
                             <br><p id="test"> I am a programmer, working towards a Bachelor's in Computer Science. </p>
                             <p> with an expected Graduation date of May 2022.</p>
