--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
                         </div>
                         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                             <div style="height: 100vh">
-                            <h2 id ="introText"><BR>Hello, my name is Rowen Lagtapon.</h2>
-                            <br><p id="test"> I am a programmer, working towards a Bachelor's in Computer Science. </p>
-                            <p> with an expected Graduation date of May 2022.</p>
-                            <br><p> Languages I have learned through my career at Texas State University: </p>
-                            <ul>
-                                <li> <p>Programming languages include: C++, Java </p> </li>
-                                    <li><p> Database: SQL on mySQL Workbench and Microsoft Servers </p></li>
-                                    <li><p>Web Development: HTML, CSS, Bootstrap, JavaScript, jQuery, Python, Flask, Jinja Template. </p></li>
-                                    <li><p>Linux: Ubuntu, ipTables, Docker</p></li>
-                            </ul>
-                           <br><p> Currently, I have a Bachelor's of Arts in English Writing, with Minor's in Communication from Texas A&M University </p>  
+                                <h2 id ="introText"><BR>Hello, my name is Rowen Lagtapon.</h2>
+                                <br><p id="test"> I am a programmer, working towards a Bachelor's in Computer Science. </p>
+                                <p> with an expected Graduation date of May 2022.</p>
+                                <br><p> Languages I have learned through my career at Texas State University: </p>
+                                <ul>
+                                    <li> <p>Programming languages include: C++, Java </p> </li>
+                                        <li><p> Database: SQL on mySQL Workbench and Microsoft Servers </p></li>
+                                        <li><p>Web Development: HTML, CSS, Bootstrap, JavaScript, jQuery, Python, Flask, Jinja Template. </p></li>
+                                        <li><p>Linux: Ubuntu, ipTables, Docker</p></li>
+                                </ul>
+                            <br><p> Currently, I have a Bachelor's of Arts in English Writing, with Minor's in Communication from Texas A&M University </p>  
                            </div>  
                          </div>
                     </div>
-                </div>
             </section>
             <br>
+            <div class="container-fluid">
             <div class = "row align-items-md-stretch">
                 <!-- secioneTwoA: Education Summary -->
                 <div class="col-md-4">
@@ -150,7 +150,7 @@
                     </div>
                     
                 <!-- secioneTwoB: Work Experience Summary -->
-                    <div class="col-md-4">
+                <div class="col-md-4">
                     <div class="h-100 p-5 sectionTwo border rounded-3">
                         <h2>Work Experience</h2>
                         <p><BR>Baylor Scott & White Health </p>
@@ -158,16 +158,17 @@
                         <p><BR>January 2019 - current</p>
                             <button class="btn btn-outline-secondary" onclick="location.href='work.html'" type="button">Go To Page</button>
                     </div>
-                    </div>
+                </div>
+            </div>
             </div>
 
-              <div class="row align-items-md-stretch">
-                <CENTER><div class="h-100">
+            <div class="row align-items-md-stretch">
+               <div class="h-100">
                     <BR><BR><BR>
-                        <button class="btn btn-outline-secondary" onclick="location.href='contactme.html'" type="button"><img src="IMG_0351.png" alt="Avatar" class="avatar"> Contact Me</button></CENTER>
-                  </div>
-                  <BR><BR>
+                        <button class="btn btn-outline-secondary" onclick="location.href='contactme.html'" type="button"><img src="IMG_0351.png" alt="Avatar" class="avatar"> Contact Me</button>
                 </div>
+                  <BR><BR>
+            </div>
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
             <script src="./static/home.js"></script>
