--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
                     <div class="h-100 p-5 sectionTwo border rounded-3">
                         <h2>Education</h2>
                         <p><BR>Currently attending Texas State University. </p>
-                        <p>Attempting second Bachelor's towards Computer Science.</p>
-                        <p><BR>Anticipated graduation is Spring 2022</p>
+                        <p>Second Bachelor's towards Computer Science.</p>
+                        <p><BR>Anticipated graduation is May 2022</p>
                             <button class="btn btn-outline-secondary" onclick="location.href='education.html'" type="button">Go To Page</button>
                     </div>
                     </div>
